Misc fixes. Col header height was too small.

--- a/TurkCellTask.less
+++ b/TurkCellTask.less
@@ -5,7 +5,7 @@
 @tabWidth: 800px;
 @tabHeight: 500px;
 @rowHeaderWidth: 35px;
-@colHeaderHeight: 22px;
+@colHeaderHeight: 24px;
 @worksheetBodyWidth: @tabWidth - @rowHeaderWidth;
 @worksheetBodyHeight: @tabHeight - @colHeaderHeight;
 
@@ -87,6 +87,7 @@
   .normalCell;
   .headerCell !important;
   min-width: 65px;
+  padding: 0px;
 }
 /*
   Row headers (e.g. 1 2 3 4...).
